--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -587,7 +587,8 @@
         "dezembro": "Diciembre"
     },
     "placeholders": {
-        "selecione_uma_opcao": "Seleccione una opción"
+        "selecione_uma_opcao": "Seleccione una opción",
+        "opcao_desabilitado": "Desactivado"
     },
     "botoes": {
         "aceitar": "Aceptar",
@@ -648,6 +649,17 @@
             "descricao": "El temporizador de sesión es una configuración que le permite establecer un límite de tiempo para el uso de la plataforma. Ayuda a controlar el tiempo empleado, alertándole cuando se alcanza el límite y finalizando automáticamente su sesión, promoviendo un uso equilibrado y consciente. Por ejemplo, puede optar por limitar sus sesiones a 30 minutos, 1 hora o cualquier otro intervalo adecuado para usted, y también desactivar esta función según lo desee. Cuando se alcanza el límite de tiempo de la sesión, nuestro sistema finalizará automáticamente su sesión y cerrará la sesión de su cuenta. Esto ayuda a garantizar que respete sus límites de tiempo predefinidos.",
             "definir_tempo": "Establecer tiempo de sesión",
             "desativado": "Desactivado"
+        },
+        "limite_tempo_atividade": {
+            "titulo": "Límite de tiempo",
+            "descricao": "El ajuste de límite de tiempo te permite establecer un tiempo máximo para jugar. Este ajuste te ayuda a controlar el tiempo que pasas, evitando el uso excesivo y promoviendo una experiencia de juego saludable. Puedes establecer un límite diario. Cuando se alcance el tiempo estipulado, aparecerá una advertencia informándote de que se ha llegado al límite, lo que ayuda a garantizar los descansos y a evitar un uso prolongado.",
+            "definir_limite_diario": "Establecer un límite de tiempo diario",
+            "30minutos": "30 minutos",
+            "45minutos": "45 minutos",
+            "1hora": "1 hora",
+            "2horas": "2 horas",
+            "3horas": "3 horas",
+            "4horas": "4 horas"
         }
     },
     "rodada_gratis":{
