fix: block button on submit

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -47,6 +47,7 @@
         "saldo": "Balance",
         "minhaConta": "My Account",
         "salvar": "Save",
+        "salvando": "Saving",
         "cancelar": "Cancel",
         "fechar": "Close",
         "todos": "All",
