--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -47,6 +47,7 @@
         "saldo": "Saldo",
         "minhaConta": "Mi cuenta",
         "salvar": "Guardar",
+        "salvando": "Guardando",
         "cancelar": "Cancelar",
         "fechar": "Cerrar",
         "todos": "Todos",
