--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -48,6 +48,7 @@
         "saldo": "Saldo",
         "minhaConta": "Minha Conta",
         "salvar": "Salvar",
+        "salvando": "Salvando",
         "cancelar": "Cancelar",
         "fechar": "Fechar",
         "todos": "Todos",
