--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -400,7 +400,7 @@
         "dailyMaximum": "Máximo diário",
         "monthlyMaximum": "Máximo mensal",
         "identityVerify": "Verificar identidade",
-        "identityVerifyNeeded": "Para prosseguir com o saque será necessário realizar a verificação de identidade antes.",
+        "identityVerifyNeeded": "Para prosseguir será necessário realizar a verificação de identidade antes.",
         "disapprovedIdentity": "Sua verificação de identidade foi reprovada. Para a realização de uma análise manual, por favor, entre em contato com o suporte."
     },
     "ativacaoEmail": {
