--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -257,7 +257,8 @@
         "loginEmail": "E-mail",
         "loginPhone": "Telefone",
         "session_alert": "Alerta de Sessão",
-        "session_alert_message": "Atualmente, existe uma sessão ativa em outro dispositivo. Para continuar o acesso, gostaria de encerrar a outra sessão?"
+        "session_alert_message": "Atualmente, existe uma sessão ativa em outro dispositivo. Para continuar o acesso, gostaria de encerrar a outra sessão?",
+        "jogoResponsavel": "Jogo responsável"
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
