--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -252,7 +252,8 @@
         "loginPhone": "Teléfono",
         "jogosRelacionados": "juegos relacionados",
         "session_alert": "Alerta de Sesión",
-        "session_alert_message": "Actualmente hay una sesión activa en otro dispositivo. Para continuar con el acceso, ¿desea cerrar la otra sesión?"
+        "session_alert_message": "Actualmente hay una sesión activa en otro dispositivo. Para continuar con el acceso, ¿desea cerrar la otra sesión?",
+        "jogoResponsavel": "Juego responsable"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
