Fix: changed the name of the email label to 'login' when exchange mode is enabled

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -250,6 +250,7 @@
         "alteracoesSucesso": "Changes made successfully!",
         "erroInesperado": "Something unexpected happened. Please try again later.",
         "enderecoNaoEncontrado": "Address not found, please fill it in manually.",
+        "loginCambista": "Login",
         "loginEmail": "Email",
         "loginPhone": "Phone"
     },
