--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -251,7 +251,8 @@
         "erroInesperado": "Something unexpected happened. Please try again later.",
         "enderecoNaoEncontrado": "Address not found, please fill it in manually.",
         "loginEmail": "Email",
-        "loginPhone": "Phone"
+        "loginPhone": "Phone",
+        "or": "OR"
     },
     "bet": {
         "sportsBetting": "Sports betting",
@@ -676,5 +677,22 @@
         "pending": "Pending",
         "redeemed": "Redeemed",
         "redeem": "Redeem"
+    },
+    "register": {
+        "signupWith": "Sign up with Google",
+        "registerGoogleAccount": "Sign up with your google account",
+        "fillToRegister": "Fill in the fields to register",
+        "protectedByReCaptchaPart1": "This site is protected by reCAPTCHA and the Goggle",
+        "protectedByReCaptchaPart2": "Privacy Policy",
+        "protectedByReCaptchaPart3": "and the",
+        "protectedByReCaptchaPart4": "Terms of Service",
+        "protectedByReCaptchaPart5": "apply."
+    },
+    "registerCancel": {
+        "titleCancelRegister": "Are you sure you want to cancel your registration?",
+        "dontMissOut": "Don't miss out! Sign up and deposit now and we'll double your deposit up to ",
+        "youreAlmostThere": "You're almost there! Register and deposit now and experience the best of entertainment in the palm of your hand.",
+        "continue": "continue",
+        "cancel": "Yes, I want to cancel"
     }
 }
