--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -247,7 +247,8 @@
         "erroInesperado": "Algo inesperado ocurrió. Inténtalo de nuevo más tarde.",
         "enderecoNaoEncontrado": "Dirección no encontrada, por favor complétala manualmente.",
         "loginEmail": "Correo electrónico",
-        "loginPhone": "Teléfono"
+        "loginPhone": "Teléfono",
+        "or": "O"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
@@ -668,5 +669,22 @@
         "pending": "Pendiente",
         "redeemed": "Canjeado",
         "redeem": "Canjear"
+    },
+    "register": {
+        "signupWith": "Regístrate en Google",
+        "registerGoogleAccount": "Regístrate con tu cuenta de google",
+        "fillToRegister": "Rellene los campos para completar su registro",
+        "protectedByReCaptchaPart1": "Este sitio está protegido por reCAPTCHA se aplican la",
+        "protectedByReCaptchaPart2": "Política de privacidad",
+        "protectedByReCaptchaPart3": "y las",
+        "protectedByReCaptchaPart4": "Condiciones del servicio",
+        "protectedByReCaptchaPart5": "de Google."
+    },
+    "registerCancel": {
+        "titleCancelRegister": "¿Está seguro de que desea cancelar su inscripción?",
+        "dontMissOut": "¡No pierdas esta oportunidad! Regístrese y deposite ahora y duplicaremos su depósito hasta ",
+        "youreAlmostThere": "¡Ya casi ha llegado! Regístrese y deposite ahora y experimente lo mejor del entretenimiento en la palma de su mano.",
+        "continue": "Continúe en",
+        "cancel": "Sí, quiero cancelar"
     }
 }
