Adjust Code review

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -688,5 +688,9 @@
         "pending": "Pending",
         "redeemed": "Redeemed",
         "redeem": "Redeem"
+    },
+    "face_match": {
+        "verified_identity": "Verified identity!",
+        "Identity_not_verified": "Identity not verified, please contact support."
     }
 }
