--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -680,5 +680,9 @@
         "pending": "Pendiente",
         "redeemed": "Canjeado",
         "redeem": "Canjear"
+    },
+    "face_match": {
+        "verified_identity": "Identidad verificada!",
+        "Identity_not_verified": "Identidad no verificada, póngase en contacto con el servicio de asistencia."
     }
 }
