--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -692,7 +692,7 @@
         "titleCancelRegister": "Are you sure you want to cancel your registration?",
         "dontMissOut": "Don't miss out! Sign up and deposit now and we'll double your deposit up to ",
         "youreAlmostThere": "You're almost there! Register and deposit now and experience the best of entertainment in the palm of your hand.",
-        "continue": "continue",
+        "continue": "Continue",
         "cancel": "Yes, I want to cancel"
     }
 }
