trad campo field

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -252,9 +252,10 @@
         "alteracoesSucesso": "Alterações realizadas com sucesso!",
         "erroInesperado": "Algo inesperado aconteceu. Tente novamente mais tarde.",
         "enderecoNaoEncontrado": "Endereço não encontrado, por favor preencha manualmente.",
-        "loginCambista": "Login",
         "loginEmail": "E-mail",
-        "loginPhone": "Telefone"
+        "loginPhone": "Telefone",
+        "loginUsername": "Nome de usuário",
+        "field": "Campo"
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
