--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -250,9 +250,10 @@
         "alteracoesSucesso": "Changes made successfully!",
         "erroInesperado": "Something unexpected happened. Please try again later.",
         "enderecoNaoEncontrado": "Address not found, please fill it in manually.",
-        "loginCambista": "Login",
         "loginEmail": "Email",
-        "loginPhone": "Phone"
+        "loginPhone": "Phone",
+        "loginUsername": "Username",
+        "field": "Field"
     },
     "bet": {
         "sportsBetting": "Sports betting",
