--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -246,9 +246,10 @@
         "alteracoesSucesso": "¡Cambios realizados con éxito!",
         "erroInesperado": "Algo inesperado ocurrió. Inténtalo de nuevo más tarde.",
         "enderecoNaoEncontrado": "Dirección no encontrada, por favor complétala manualmente.",
-        "loginCambista": "Acceso",
         "loginEmail": "Correo electrónico",
-        "loginPhone": "Teléfono"
+        "loginPhone": "Teléfono",
+        "loginUsername": "Username",
+        "field": "Campo"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
