FIX: spelling correction in an account deletion reason option.

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -648,7 +648,7 @@
             "motivo_1": "Uma segunda conta foi criada",
             "motivo_2": "Ocupa muito meu tempo/desvia muito minha atenção",
             "motivo_3": "Não tenho mais interesse em realizar apostas neste site",
-            "motivo_4": "Não estou mais usando está conta",
+            "motivo_4": "Não estou mais usando esta conta",
             "motivo_5": "Problemas ao utilizar o sistema",
             "motivo_6": "Outros motivos",
             "digite_para_continuar": "Digite \"<b>EXCLUIR PERMANENTEMENTE</b>\" para confirmar a ação de exclusão.",
