feat: Added "Last Accesses" page to "Profile" menu with filtering and pagination functionalities. Added custom pagination for navigating records.

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -253,7 +253,9 @@
         "loginEmail": "Email",
         "loginPhone": "Phone",
         "loginUsername": "Username",
-        "field": "Field"
+        "field": "Field",
+        "lastAccesses": "Last accesses",
+        "action": "Action"
     },
     "bet": {
         "sportsBetting": "Sports betting",
