--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -249,7 +249,8 @@
         "loginEmail": "Correo electrónico",
         "loginPhone": "Teléfono",
         "loginUsername": "Username",
-        "field": "Campo"
+        "field": "Campo",
+        "lastAccesses": "Últimos accesos"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
