adjust: Resolve translations conflict.

--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -251,7 +251,8 @@
         "loginUsername": "Username",
         "field": "Campo",
         "or": "O",
-        "lastAccesses": "Últimos accesos"
+        "lastAccesses": "Últimos accesos",
+        "action": "Acción"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
