fix: add translation and remove console.log

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -254,7 +254,8 @@
         "loginPhone": "Phone",
         "loginUsername": "Username",
         "field": "Field",
-        "or": "OR"
+        "or": "OR",
+        "geolocationError": "Please check your browser's location settings and try again."
     },
     "bet": {
         "sportsBetting": "Sports betting",
