--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -251,7 +251,8 @@
         "loginUsername": "Username",
         "field": "Campo",
         "or": "O",
-        "geolocationError": "Por favor, verifique la configuración de ubicación de su navegador y intente nuevamente."
+        "geolocationError": "Por favor, verifique la configuración de ubicación de su navegador y intente nuevamente.",
+        "restricaoDeLocalizacao": "Este recurso está disponible solo para usuarios en Brasil."
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
