--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -257,7 +257,8 @@
         "loginUsername": "Nome de usuário",
         "field": "Campo",
         "or": "OU",
-        "geolocationError": "Por favor, verifique a configuração de localização do seu navegador e tente novamente."
+        "geolocationError": "Por favor, verifique a configuração de localização do seu navegador e tente novamente.",
+        "restricaoDeLocalizacao": "Este recurso está disponível apenas para usuários no Brasil."
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
