feat: add modal "repetir aposta".

--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -736,6 +736,7 @@
         "calculando": "Calculando...",
         "encerrarAposta": "Finalizar apuesta",
         "encerrando": "Finalizando...",
-        "apostaNaoPodeSerEncerrada": "La apuesta no se puede finalizar."
+        "apostaNaoPodeSerEncerrada": "La apuesta no se puede finalizar.",
+        "apostaNaoPodeSerRepetida": "No es posible repetir la apuesta en este momento. Inténtelo de nuevo más tarde o verifique el progreso de los partidos."
     }
 }
