--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -741,6 +741,7 @@
         "calculando": "Calculating...",
         "encerrarAposta": "End bet",
         "encerrando": "Ending...",
-        "apostaNaoPodeSerEncerrada": "The bet cannot be ended."
+        "apostaNaoPodeSerEncerrada": "The bet cannot be ended.",
+        "apostaNaoPodeSerRepetida": "The bet cannot be repeated at the moment. Please try again later or check the status of the matches."
     }
 }
