feat: show income tax on prize in listining of sport and casino bets

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -266,7 +266,8 @@
     },
     "bet": {
         "sportsBetting": "Sports betting",
-        "casinoBetting": "Casino betting"
+        "casinoBetting": "Casino betting",
+        "incomeTaxOnPrize": "Income tax on prize"
     },
     "dias": {
         "ontem": "Yesterday",
