--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -266,7 +266,8 @@
         "jogosRelacionados": "juegos relacionados",
         "session_alert": "Alerta de Sesión",
         "session_alert_message": "Actualmente hay una sesión activa en otro dispositivo. Para continuar con el acceso, ¿desea cerrar la otra sesión?",
-        "jogoResponsavel": "Juego responsable"
+        "jogoResponsavel": "Juego responsable",
+        "tax": "Impuesto"
     },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
