--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -271,7 +271,8 @@
         "action": "Ação",
         "session_alert": "Alerta de Sessão",
         "session_alert_message": "Atualmente, existe uma sessão ativa em outro dispositivo. Para continuar o acesso, gostaria de encerrar a outra sessão?",
-        "jogoResponsavel": "Jogo responsável"
+        "jogoResponsavel": "Jogo responsável",
+        "tax": "Imposto"
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
