--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -690,7 +690,8 @@
         "protectedByReCaptchaPart2": "Política de Privacidade",
         "protectedByReCaptchaPart3": "do Google e os",
         "protectedByReCaptchaPart4": "Termos de Serviço",
-        "protectedByReCaptchaPart5": "se aplicam."
+        "protectedByReCaptchaPart5": "se aplicam.",
+        "registrationBeneficiariesSocialPrograms": "Os beneficiários de programas sociais não podem se registrar."
     },
     "registerCancel": {
         "titleCancelRegister": "Tem certeza que deseja cancelar seu registro?",
