feat: show before and after balance of customer in financeiro

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -527,7 +527,10 @@
         "valorMaximoSaqueMensal" : "Maximum monthly withdrawal amount",
         "receberBonusCassino": "Receive Bonus - Casino",
         "transactions": "Transactions",
-        "paymentGateway": "Payment gateway"
+        "paymentGateway": "Payment gateway",
+        "balance": "Balance",
+        "previousBalance": "Previous balance",
+        "subsequentBalance": "Subsequent balance"
     },
     "rollover":{
         "nenhumRollover": "No rollover.",
