fix: uppercase texts, change translations, fix play button, remove bold texts

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -247,7 +247,8 @@
         "jogosEmAlta": "Trending games",
         "nenhumJogoDisponivel": "No games available at the moment",
         "loginGoogle" : "Sign in with Google account.",
-        "computadoEm": "Computed in:",
+        "computadoEm": "Computed on:",
+        "liquidadoEm": "Settled on:",
         "alteracoesSucesso": "Changes made successfully!",
         "erroInesperado": "Something unexpected happened. Please try again later.",
         "enderecoNaoEncontrado": "Address not found, please fill it in manually.",
