--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -243,7 +243,8 @@
         "jogosEmAlta": "Juegos de tendencia",
         "nenhumJogoDisponivel": "No hay juegos disponibles en este momento",
         "loginGoogle" : "Inicia sesión con la cuenta de Google.",
-        "computadoEm": "Calculado en:",
+        "computadoEm": "Calculado el:",
+        "liquidadoEm": "Liquidado el:",
         "alteracoesSucesso": "¡Cambios realizados con éxito!",
         "erroInesperado": "Algo inesperado ocurrió. Inténtalo de nuevo más tarde.",
         "enderecoNaoEncontrado": "Dirección no encontrada, por favor complétala manualmente.",
