--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -442,9 +442,9 @@
         "soliciteEntrandoEmContatoCom": "Solicite un depósito poniéndose en contacto con nosotros a través de Whatsapp: {{whatsapp}}",
         "depositosRecentes": "Depósitos recientes",
         "depositDetails": "Detalles del depósito",
-        "depositText": "Para hacer un depósito a través de {{paymentMethod}}, ingrese el monto deseado en el campo a continuación, seleccione si desea recibir el {{bonusType}}, proporcione el código promocional si está disponible y haga clic en el botón “Depósito“. Se generará un código QR y se mostrará en la pantalla para que realice el pago.",
-        "depositTextWithoutBonus": "Para hacer un depósito a través de {{paymentMethod}}, ingrese el monto deseado en el campo a continuación, proporcione el código promocional si está disponible y haga clic en el botón “Depósito“. Se generará un código QR y se mostrará en la pantalla para que realice el pago.",
-        "depositTextWithoutBonusAndPromocode": "Para hacer un depósito a través de {{paymentMethod}}, ingrese el monto deseado en el campo a continuación y haga clic en el botón “Depósito“. Se generará un código QR y se mostrará en la pantalla para que realice el pago.",
+        "depositText": "Para hacer un depósito a través de PIX, ingrese el monto deseado en el campo a continuación, seleccione si desea recibir el {{bonusType}}, proporcione el código promocional si está disponible y haga clic en el botón “Depósito“. Se generará un código QR y se mostrará en la pantalla para que realice el pago.",
+        "depositTextWithoutBonus": "Para hacer un depósito a través de PIX, ingrese el monto deseado en el campo a continuación, proporcione el código promocional si está disponible y haga clic en el botón “Depósito“. Se generará un código QR y se mostrará en la pantalla para que realice el pago.",
+        "depositTextWithoutBonusAndPromocode": "Para hacer un depósito a través de PIX, ingrese el monto deseado en el campo a continuación y haga clic en el botón “Depósito“. Se generará un código QR y se mostrará en la pantalla para que realice el pago.",
         "copyCode": "Copiar código",
         "copied": "Copiado!"
     },
