chore: change pwa install handle

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -440,6 +440,7 @@
         "metodosDePagamento": "Payment methods",
         "quemSomos": "Who we are",
         "downloadApp": "Download app",
+        "installPwa": "Install Client APP",
         "regras": "Rules",
         "resultados": "Results",
         "politicaDePrivacidade": "Privacy Policy",
