--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -432,6 +432,7 @@
         "metodosDePagamento": "Métodos de pago",
         "quemSomos": "Quiénes somos",
         "downloadApp": "Descargar aplicación",
+        "installPwa": "Instalar la aplicación cliente",
         "regras": "Reglas",
         "resultados": "Resultados",
         "politicaDePrivacidade": "Política de privacidad",
