feat: added periodicity in account deletion

--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -670,18 +670,29 @@
         },
         "exclusao_conta": {
             "titulo": "Exclusión de cuenta",
-            "descricao": "Eliminar permanentemente la cuenta es una acción que resulta en la eliminación completa de la cuenta y toda la información asociada a ella, de forma irreversible. Esto incluye datos personales, historial de apuestas y acceso a la plataforma. Al eliminar permanentemente la cuenta, terminará su participación en el sitio de forma definitiva, sin posibilidad de recuperar la cuenta o su información en el futuro.",
-            "descricao_2": "Además, enfatizamos que esta acción también implicará la imposibilidad de crear una nueva cuenta en la plataforma.",
-            "informe_motivo": "Informe por qué desea eliminar permanentemente su cuenta:",
+            "descricao": "Eliminar la cuenta es una acción que resulta en la eliminación completa de la cuenta y toda la información asociada a ella, de forma irreversible. Esto incluye datos personales, historial de apuestas y acceso a la plataforma. Al eliminar la cuenta, finalizarás tu participación en el sitio permanentemente, sin posibilidad de recuperar la cuenta o su información en el futuro.",
+            "descricao_2": "Además, destacamos que esta acción también implicará la imposibilidad de crear una nueva cuenta en la plataforma si se elige el período permanente.",
+            "exclusionPeriodLabel": "Informe durante cuánto tiempo desea eliminar su cuenta:",
+            "3months": "3 meses",
+            "6months": "6 meses",
+            "12months": "12 meses",
+            "24months": "24 meses",
+            "36months": "36 meses",
+            "48months": "48 meses",
+            "60months": "60 meses",
+            "permanently": "Permanentemente",
+            "periodIsMissing": "El período de eliminación no ha sido seleccionado.",
+            "informe_motivo": "Informe por qué desea eliminar su cuenta:",
             "motivo_1": "Se creó una segunda cuenta",
             "motivo_2": "Toma demasiado tiempo/atención",
             "motivo_3": "Ya no tengo interés en apostar en este sitio",
             "motivo_4": "Ya no estoy usando esta cuenta",
             "motivo_5": "Problemas al usar el sistema",
             "motivo_6": "Otros motivos",
-            "digite_para_continuar": "Escriba \"<b>ELIMINAR PERMANENTEMENTE</b>\" para confirmar la acción de eliminación.",
+            "digite_para_continuar": "Escriba \"<b>ELIMINAR CUENTA</b>\" para confirmar la acción de eliminación.",
+            "exclusionConfirmationError": "Escriba exactamente la frase \"ELIMINAR CUENTA\" para confirmar la eliminación de la cuenta.",
             "explique_motivo": "Explique por qué está eliminando la cuenta...",
-            "excluir_conta": "Eliminar cuenta permanentemente"
+            "excluir_conta": "Eliminar cuenta"
         },
         "temporizador_sessao": {
             "titulo": "Temporizador de sesión",
