--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -680,18 +680,29 @@
         },
         "exclusao_conta": {
             "titulo": "Exclusão de conta",
-            "descricao": "Excluir permanentemente a conta é uma ação que resulta na remoção completa da conta e de todas as informações associadas a ela, de forma irreversível. Isso inclui dados pessoais, histórico de apostas e acesso à plataforma. Ao excluir a conta permanentemente, você encerrará sua participação no site de forma definitiva, sem a possibilidade de recuperar a conta ou suas informações no futuro.",
-            "descricao_2": "Além disso, ressaltamos que essa ação também implicará na impossibilidade de criar uma nova conta na plataforma.",
-            "informe_motivo": "Informe por qual motivo você deseja excluir sua conta permanentemente:",
+            "descricao": "Excluir a conta é uma ação que resulta na remoção completa da conta e de todas as informações associadas a ela, de forma irreversível. Isso inclui dados pessoais, histórico de apostas e acesso à plataforma. Ao excluir a conta, você encerrará sua participação no site de forma definitiva, sem a possibilidade de recuperar a conta ou suas informações no futuro.",
+            "descricao_2": "Além disso, ressaltamos que essa ação também implicará na impossibilidade de criar uma nova conta na plataforma, caso o período permanente seja escolhido.",
+            "exclusionPeriodLabel": "Informe por quanto tempo você deseja excluir sua conta:",
+            "3months": "3 meses",
+            "6months": "6 meses",
+            "12months": "12 meses",
+            "24months": "24 meses",
+            "36months": "36 meses",
+            "48months": "48 meses",
+            "60months": "60 meses",
+            "permanently": "Permanentemente",
+            "periodIsMissing": "O período de exclusão não foi selecionado.",
+            "informe_motivo": "Informe por qual motivo você deseja excluir sua conta:",
             "motivo_1": "Uma segunda conta foi criada",
             "motivo_2": "Ocupa muito meu tempo/desvia muito minha atenção",
             "motivo_3": "Não tenho mais interesse em realizar apostas neste site",
             "motivo_4": "Não estou mais usando esta conta",
             "motivo_5": "Problemas ao utilizar o sistema",
             "motivo_6": "Outros motivos",
-            "digite_para_continuar": "Digite \"<b>EXCLUIR PERMANENTEMENTE</b>\" para confirmar a ação de exclusão.",
+            "digite_para_continuar": "Digite \"<b>EXCLUIR CONTA</b>\" para confirmar a ação de exclusão.",
+            "exclusionConfirmationError": "Digite exatamente a frase \"EXCLUIR CONTA\" para confirmar a exclusão da conta.",
             "explique_motivo": "Explique sobre quais motivos você está excluindo a conta...",
-            "excluir_conta": "Excluir conta permanentemente"
+            "excluir_conta": "Excluir conta"
         },
         "temporizador_sessao": {
             "titulo": "Temporizador de sessão",
