feature: added bank account option for player.

--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -269,6 +269,15 @@
         "jogoResponsavel": "Juego responsable",
         "tax": "Impuesto"
     },
+    "bankAccounts": {
+        "title" : "Bank Accounts",
+        "Bank": "Banco",
+        "AgencyNumber": "Número de agencia",
+        "AccountNumber": "Número de cuenta",
+        "AccountType": "Tipo de cuenta",
+        "CurrentAccount": "Cuenta corriente",
+        "SavingsAccount": "Cuenta de ahorros"
+    },
     "bet": {
         "sportsBetting": "Apuestas deportivas",
         "casinoBetting": "Apuestas de casino",
