--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -269,6 +269,15 @@
         "action": "Action",
         "tax": "Tax"
     },
+    "bankAccounts": {
+        "title" : "Cuentas bancarias",
+        "Bank": "Bank",
+        "AgencyNumber": "Agency number",
+        "AccountNumber": "Account number",
+        "AccountType": "Account type",
+        "CurrentAccount": "Current account",
+        "SavingsAccount": "Savings account"
+    },
     "bet": {
         "sportsBetting": "Sports betting",
         "casinoBetting": "Casino betting",
