--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -272,7 +272,17 @@
         "session_alert": "Alerta de Sessão",
         "session_alert_message": "Atualmente, existe uma sessão ativa em outro dispositivo. Para continuar o acesso, gostaria de encerrar a outra sessão?",
         "jogoResponsavel": "Jogo responsável",
-        "tax": "Imposto"
+        "tax": "Imposto",
+        "bankAccounts" : "Contas Bancárias"
+    },
+    "bankAccounts": {
+        "title" : "Contas Bancárias",
+        "Bank": "Banco",
+        "AgencyNumber": "Número da agência",
+        "AccountNumber": "Número da conta",
+        "AccountType": "Tipo de conta",
+        "CurrentAccount": "Conta corrente",
+        "SavingsAccount": "Conta poupança"
     },
     "bet": {
         "sportsBetting": "Apostas esportivas",
